# RepoLens

./: .gitignore  AGENTS.md  README.md  SKILL.md  cloudbuild.backend.yaml  cloudbuild.frontend.yaml  firebase.json
backend/: Dockerfile  __init__.py  app.py  config.py  models.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  health.py  interviews.py  repositories.py
backend/app/core/: __init__.py  settings.py
backend/app/models/: __init__.py  common.py  examples.py  interview.py  repository.py
backend/app/prompts/: __init__.py
backend/app/services/: __init__.py  auth_service.py  gemini_service.py  github_client.py  repository_profiler.py  session_store.py
backend/prompts/: __init__.py  interview.py
backend/routes/: __init__.py  analyze.py  health.py  interview.py
backend/services/: __init__.py  analyzer.py  dependency_parser.py  gemini.py  interview.py  knowledge_pack.py  openai.py  profile_builder.py  provider_router.py  retrieval.py  scanner.py
backend/tests/: __init__.py  test_api.py  test_config.py  test_contract_examples.py  test_interview_service.py  test_knowledge_pack.py  test_models.py  test_prompts_doc.py  test_provider_router.py  test_retrieval.py  test_scanner.py  test_settings.py
docs/: api-contracts.md  architecture.md  gcp-setup.md  prompts.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/public/: health.json
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
(+17 files in other folders)
