[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repolens-backend"
version = "0.1.0"
description = "Foundation scaffold for the RepoLens FastAPI backend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.136.0,<1.0.0",
  "pydantic>=2.12.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

